monitoring/envoy-proxy-bouncer/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: homelab-envoy-proxy-bouncer
  namespace: envoy-gateway-system
spec:
  from:
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: argocd
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: bluesky
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: mealie
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: media
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: pocketid
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: vaultwarden
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: blog
  to:
  - group: ""
    kind: Service
    name: homelab-envoy-proxy-bouncer
