monitoring/envoy-proxy-bouncer/bouncer.yaml
---
# Source: envoy-proxy-bouncer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-envoy-proxy-bouncer
  labels:
    helm.sh/chart: envoy-proxy-bouncer-0.1.3
    app.kubernetes.io/name: envoy-proxy-bouncer
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/version: "v0.1.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: grpc
      protocol: TCP
      name: grpc
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: envoy-proxy-bouncer
    app.kubernetes.io/instance: homelab
---
# Source: envoy-proxy-bouncer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-envoy-proxy-bouncer
  labels:
    helm.sh/chart: envoy-proxy-bouncer-0.1.3
    app.kubernetes.io/name: envoy-proxy-bouncer
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/version: "v0.1.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy-proxy-bouncer
      app.kubernetes.io/instance: homelab
  template:
    metadata:
      labels:
        helm.sh/chart: envoy-proxy-bouncer-0.1.3
        app.kubernetes.io/name: envoy-proxy-bouncer
        app.kubernetes.io/instance: homelab
        app.kubernetes.io/version: "v0.1.3"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: homelab-envoy-proxy-bouncer
      securityContext: {}
      containers:
        - name: envoy-proxy-bouncer
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "ghcr.io/kdwils/envoy-proxy-bouncer:sha-3985e0b049209c09c3a7df09ea58252944888cf2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 8080
              protocol: TCP
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
---
# Source: envoy-proxy-bouncer/templates/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: homelab-envoy-proxy-bouncer
  namespace: envoy-gateway-system
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: homelab
  extAuth:
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: homelab-envoy-proxy-bouncer
          port: 8080
          namespace: envoy-gateway-system
