monitoring/envoy-proxy-bouncer/bouncer2.yaml
---
# Source: envoy-proxy-bouncer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-envoy-proxy-bouncer
  labels:
    helm.sh/chart: envoy-proxy-bouncer-0.2.1
    app.kubernetes.io/name: envoy-proxy-bouncer
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/version: "v0.2.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: grpc
      protocol: TCP
      name: grpc
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: envoy-proxy-bouncer
    app.kubernetes.io/instance: homelab
---
# Source: envoy-proxy-bouncer/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-envoy-proxy-bouncer
  labels:
    helm.sh/chart: envoy-proxy-bouncer-0.2.1
    app.kubernetes.io/name: envoy-proxy-bouncer
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/version: "v0.2.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy-proxy-bouncer
      app.kubernetes.io/instance: homelab
  template:
    metadata:
      labels:
        helm.sh/chart: envoy-proxy-bouncer-0.2.1
        app.kubernetes.io/name: envoy-proxy-bouncer
        app.kubernetes.io/instance: homelab
        app.kubernetes.io/version: "v0.2.1"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: test-envoy-proxy-bouncer
      securityContext: {}
      containers:
        - name: envoy-proxy-bouncer
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "ghcr.io/kdwils/envoy-proxy-bouncer:sha-101b641431df13792c0bfe2f4826e544ac9224fc"
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 8080
              protocol: TCP
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
---
# Source: envoy-proxy-bouncer/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-envoy-proxy-bouncer
  labels:
    helm.sh/chart: envoy-proxy-bouncer-0.2.1
    app.kubernetes.io/name: envoy-proxy-bouncer
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/version: "v0.2.1"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "bouncer.kyledev.co"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /captcha
      backendRefs:
        - name: test-envoy-proxy-bouncer
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-envoy-proxy-bouncer
          port: 8080
---
# Source: envoy-proxy-bouncer/templates/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: test-envoy-proxy-bouncer
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: argocd
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: bluesky
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: mealie
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: media
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: pocketid
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: vaultwarden
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: blog
  to:
    - group: ""
      kind: Service
      name: test-envoy-proxy-bouncer
